--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -45,8 +45,8 @@
   
   <!--  AJAX servlet mappings. -->
   <servlet-mapping>
-    <servlet-name>AddNumbersAjaxServlet</servlet-name>
-    <url-pattern>/ajax/addNumbers</url-pattern>
+  	<servlet-name>AddNumbersAjaxServlet</servlet-name>
+  	<url-pattern>/ajax/addNumbers</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>NextGuessAjaxServlet</servlet-name>
@@ -58,5 +58,9 @@
   </welcome-file-list><!--Game Servlet--><servlet>
   	<servlet-name>GameServlet</servlet-name>
   	<servlet-class>edu.ycp.cs320.tbagproj.servlet.GameServlet</servlet-class>
-</servlet>
+</servlet><!--GameServlet mappings-->
+	<servlet-mapping>
+		<servlet-name>GameServlet</servlet-name>
+		<url-pattern>/gameView</url-pattern>
+	</servlet-mapping>
 </web-app>
